--- a/packages/mini-studio/package.json
+++ b/packages/mini-studio/package.json
@@ -9,15 +9,15 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.0",
+    "@react-three/fiber": "^8.15.0",
+    "@types/three": "^0.158.0",
+    "antd": "^5.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "antd": "^5.12.0",
-    "three": "^0.158.0",
-    "@react-three/fiber": "^8.15.0",
-    "@react-three/drei": "^9.88.0",
-    "zustand": "^4.4.0",
     "react-router-dom": "^6.18.0",
-    "@types/three": "^0.158.0"
+    "three": "^0.158.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -29,6 +29,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^7.3.1"
   }
 }
