--- a/packages/mini-studio/package.json
+++ b/packages/mini-studio/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "three": "^0.158.0",
+    "three-stdlib": "^2.36.1",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
