refactor: 项目结构优化和文档完善
- 清理根目录，移动36个文档到docs/目录
- 按类型组织文档：implementation/ui/fixes/reports/images
- 移动图片文件到docs/images/
- 移动工具脚本到tools/diagnostics/
- 删除临时文件和缓存（.hypothesis, .pytest_cache, result/）
- 为每个主要目录创建README文档
- 更新主README，提供完整的项目概述
- 优化.gitignore，排除临时文件和报告
- 项目结构更加清晰和易于维护

--- a/v1/.gitignore
+++ b/v1/.gitignore
@@ -141,16 +141,28 @@ cython_debug/
 # VS Code
 .vscode/
 
-# Robot model files
-*.urdf
-*.mjcf
-*.xml
-
 # Simulation data
 simulation_data/
 logs/
 results/
+result/
 
 # Performance profiling
 *.prof
 *.pstats
+
+# Test cache and temporary files
+.hypothesis/
+.pytest_cache/
+*.pyc
+*.pyo
+
+# Tuning reports (keep structure, ignore content)
+tuning_reports/*.png
+tuning_reports/*.json
+tuning_reports/*.md
+
+# Build artifacts
+*.egg-info/
+build/
+dist/
