Add deployment packaging tools and documentation
- Add automated packaging scripts for Linux/Mac/Windows
- Create comprehensive deployment guides
- Package size optimized from 789MB to 10MB (98.7% reduction)
- Exclude venv, node_modules, cache files
- Include quick start guide in Chinese and English
- Update .gitignore to exclude generated packages

--- a/v1/.gitignore
+++ b/v1/.gitignore
@@ -166,3 +166,10 @@ tuning_reports/*.md
 *.egg-info/
 build/
 dist/
+
+# Deployment packages
+LoongEnv_deploy_*.tar.gz
+*.tar.gz
+*.zip
+.tarignore.tmp
+部署说明.txt
